syntax = "proto3";
package saturn.randomness;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "randomness/params.proto";
import "randomness/chain_info.proto";
import "randomness/unproven_rendomness.proto";
import "randomness/proven_randomness.proto";
// this line is used by starport scaffolding # 1

option go_package = "saturn/x/randomness/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/saturn/randomness/params";
  }
  // Queries a ChainInfo by index.
	rpc ChainInfo(QueryGetChainInfoRequest) returns (QueryGetChainInfoResponse) {
		option (google.api.http).get = "/saturn/randomness/chain_info";
	}
// Queries a UnprovenRendomness by index.
	rpc UnprovenRendomness(QueryGetUnprovenRendomnessRequest) returns (QueryGetUnprovenRendomnessResponse) {
		option (google.api.http).get = "/saturn/randomness/unproven_rendomness/{index}";
	}

	// Queries a list of UnprovenRendomness items.
	rpc UnprovenRendomnessAll(QueryAllUnprovenRendomnessRequest) returns (QueryAllUnprovenRendomnessResponse) {
		option (google.api.http).get = "/saturn/randomness/unproven_rendomness";
	}

// Queries a ProvenRandomness by index.
	rpc ProvenRandomness(QueryGetProvenRandomnessRequest) returns (QueryGetProvenRandomnessResponse) {
		option (google.api.http).get = "/saturn/randomness/proven_randomness/{index}";
	}

	// Queries a list of ProvenRandomness items.
	rpc ProvenRandomnessAll(QueryAllProvenRandomnessRequest) returns (QueryAllProvenRandomnessResponse) {
		option (google.api.http).get = "/saturn/randomness/proven_randomness";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetChainInfoRequest {}

message QueryGetChainInfoResponse {
	ChainInfo ChainInfo = 1 [(gogoproto.nullable) = false];
}
message QueryGetUnprovenRendomnessRequest {
	  string index = 1;

}

message QueryGetUnprovenRendomnessResponse {
	UnprovenRendomness unprovenRendomness = 1 [(gogoproto.nullable) = false];
}

message QueryAllUnprovenRendomnessRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllUnprovenRendomnessResponse {
	repeated UnprovenRendomness unprovenRendomness = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetProvenRandomnessRequest {
	  string index = 1;

}

message QueryGetProvenRandomnessResponse {
	ProvenRandomness provenRandomness = 1 [(gogoproto.nullable) = false];
}

message QueryAllProvenRandomnessRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllProvenRandomnessResponse {
	repeated ProvenRandomness provenRandomness = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// this line is used by starport scaffolding # 3
